Design/ Copy Update

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,13 @@ images/uncompressedimages
 .idea/workspace.xml
 .idea/workspace.xml
 .idea/workspace.xml
+
+.idea/encodings.xml
+
+.idea/encodings.xml
+
+.idea/midgardwebsite.iml
+
+.idea/modules.xml
+
+.idea/vcs.xml
