--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
             "type": "image/png"
         }
     ],
-    "theme_color": "#ffffff",
-    "background_color": "#ffffff",
+    "theme_color": "#25c2f2",
+    "background_color": "#25c2f2",
     "display": "standalone"
 }
